# quant

./: .commit_msg_tmp  .coveragerc  .editorconfig  .env.example  .flake8  .gitignore  .memory_rules.md  .pre-commit-config.yaml  .pylintrc  AI_BEHAVIOR_RULES.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  REPORT_REFACTOR.md  __init__.py  activate_env.sh  clean_data.sh  conf.example.yaml  conf.local.yaml  conf.yaml  config.yaml  fetch_data.sh  main.py  plan.md  pyproject.toml  pyrightconfig.json  pytest.ini  requirements.txt  run.sh  test-ma.sh
.codebuddy/plans/: datafeed-parquet-cache_160cbbad(未完成).md  datafeed-parquet-cache_6358d2eb(未完成).md  datafeed-parquet-cache_aa433343.md
.github/workflows/: ci.yml
.pip/: pip.conf
.plan/: plan.0.0.1.log.md  plan.0.0.10.log.md  plan.0.0.11.log.md  plan.0.0.2.log.md  plan.0.0.3.log.md  plan.0.0.4.log.md  plan.0.0.5.log.md  plan.0.0.6.log.md  plan.0.0.7.log.md  plan.0.0.8.log.md  plan.0.0.9.log.md  plan.0.1.0.log.md  plan.0.2.0.log.md  plan.1.0.0.log.md  plan.2.0.0.log.md  plan.3.0.0.log.md
.trae/rules/: project_rules.md
backtest/: __init__.py  aggregator.py  backtest_engine.py  comparison.py  data_loader.py  data_utils.py  metrics.py  optimizer.py  optuna_study.py  parallel.py  persister.py  report.py  results.py  runners.py  strategy_factory.py  tq_backtest_engine.py  types.py  vnpy_backtest_engine.py  walk_forward.py
backtest/strategies/: __init__.py  vnpy_ma_strategy.py
cli/: __init__.py  main.py
cli/commands/: __init__.py  backtest.py  export.py  live.py  report.py  test.py  tqsdk.py
cli/workflows/: __init__.py  backtests_lifecycle.py  backtests_run.py  report.py  tqsdk_realtime.py
common/: __init__.py  constants.py  contract_specs.py  formatting.py  formulas.py  log_config.py  metrics.py  schemas.py  stats.py  symbol_utils.py  tqsdk_imports.py  types.py  typing.py
config/: __init__.py  app_config.py  conf.example.toml  conf.example.yaml  conf.toml  conf.yaml  config_manager.py  manager.py  schemas.py
data/: __init__.py  compat.py  database.py  exporter.py  manager.py  models.py  optuna_query.py  output_paths.py  report_queries.py  schema.py  store.py
data/datasource/: __init__.py  akshare_source.py  base.py  tqsdk_source.py
doc/: api-reference.md  architecture.md  configuration.md  faq.md  overview.md  strategy-guide.md  usage-guide.md
docs/: README.md  api-reference.md  architecture.md  backtest-refactor-plan.md  configuration.md  data-dictionary.md  directory-roadmap.md  faq.md  glossary.md  overview.md  parallel_backtest_spec.md  risk-assessment.md  strategy-guide.md  usage-guide.md
docs/archive/: README.md
docs/designs/: backtest-refactor-plan.md  report-refactor.md  strategy-ma-profitability.md
docs/issues/: README.md  cli-backtest-single-mode-and-strategy-params.md  cli-entry-workspace-pythonpath.md  prevday-volume-random-baseline-performance.md  trade-clearing-diagnostics-not-propagated.md  vnpy-close-trade-pairing-warning.md  vnpy-pnl-mouth-reconciliation.md  vnpy-tradedata-dynamic-payload.md
docs/reference/: configuration.md
docs/research/: README.md  strategy-current.md
docs/roadmap/: backtest-refactor-plan.md  directory-roadmap.md  engineering-roadmap.md  framework-indicator-history-issues.md  ma-positive-expectancy.md  plan.md  strategy-atr-tuning.md  strategy-positive-expectancy-lessons.md  strategy-research-framework.md  strategy-short-term-plan.md
docs/workbench/: README.md  low-validation-cost-r2-bollinger-retest.md  poc-value-area-asymmetry-stage3-robustness.md  poc-value-area-asymmetry-stage4-classifier-v3.md  stage-b-sweep-summary.md  structural-alpha-r1-engineering-plan.md  structural-alpha-r2-prevday-reacceptance.md  structural-alpha-r3-volume-shock-boundary.md  structural-alpha-r4-prevday-volume-filter.md  structural-alpha-r5-hourly-liquidity-sweep.md  structural-alpha-r6-low-volatility-restart.md  structural-alpha-r6-persistent-value-area.md  (+12 more)
optimizer/: __init__.py  grid_search.py  optuna_search.py
report/: DATA_SOURCES.md  README.md  __init__.py  _helpers.py  _html.py  builder.py  charts.py  comparison_reporter.py  dashboard.py  dataset_reporter.py  kline_cache.py  optimizer_report.py  output_paths.py  reports.py  single.py  sql_reporter.py  summary.py
scripts/: README.md  test.sh  va_compare_classifier.py  va_compare_norm.py  va_legacy_backtest.py  va_regenerate_features.py
strategies/: __init__.py  ma_strategy.py  moving_average_strategy.py  spec.md
tests/: conftest.py  test_aggregator.py  test_common.py  test_config.py  test_config_manager.py  test_data_feed.py  test_data_loader.py  test_database.py  test_formulas.py  test_ma_strategy.py  test_ma_strategy_compatibility.py  test_models.py  test_new_architecture.py  test_report.py  test_report_comparison.py  test_strategies.py  test_walk_forward.py
tools/: README.md  backtest-debug.sh  backtest-ma.sh  clean_data.sh  fetch_data.py  fetch_data.sh  test-ma.sh  test-signal.sh
visualizer/: __init__.py  charts.py
workspace/report/: DATA_SOURCES.md  README.md  __init__.py  output_paths.py  pyproject.toml
workspace/report/builder/: data_exports.py  entry_html.py  frontend.py
workspace/report/cache/: __init__.py  build.py  kline.py
workspace/report/reporter/: __init__.py  optimizer.py  text.py
workspace/report/web/: DEVELOPMENT.md  package-lock.json  tsconfig.json  vitest.config.ts
workspace/report/web/src/: App.tsx  index.css  main.tsx
workspace/report/web/src/components/data/: StructuralDiagnostics.tsx  SymbolTable.test.tsx
workspace/report/web/src/data/: loader.test.ts  loader.ts
workspace/report/web/src/hooks/: useKlineChart.ts
workspace/report/web/src/pages/: BacktestDetail.test.tsx  BacktestDetail.tsx  NavPage.tsx
workspace/report/web/src/pages/run/: RunHeader.tsx  index.tsx  useRunData.ts
workspace/report/web/src/test/: setup.ts
workspace/report/web/src/types/: backtest.ts  diagnostics.ts  index.ts  optuna.ts  run.ts
workspace/report/web/src/utils/: chartTime.ts  indicators.ts  tradeMarkers.ts
workspace/report/writer/: __init__.py  json_writer.py
(+1057 files in other folders)
