[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "quant"
version = "0.2.0-dev"
description = "天勤量化交易系统 - 均线交叉策略回测与实盘"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Financial and Insurance Industry",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

dependencies = [
    "tqsdk==3.0.0",
    "vnpy==3.8.0",
    "vnpy_ctastrategy==1.2.0",
    "pandas>=2.0",
    "numpy>=1.24",
    "tomli>=2.0; python_version < '3.11'",
    "matplotlib>=3.7",
    "plotly>=5.0",
    "peewee>=3.15",
    "typing-extensions>=4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "flake8>=6.1",
    "pylint>=2.17",
    "mypy>=1.5",
    "pandas-stubs>=2.0",
    "tomli-w>=1.0",
]
optuna = ["optuna>=3.0"]
all = ["optuna>=3.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
addopts = "-v --tb=short --strict-markers --cov=. --cov-report=term-missing --cov-report=html:output/coverage --typeguard-packages=quant"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "core: tests for strategy core module",
    "config: tests for config manager",
    "loader: tests for data loader",
    "database: tests for database module",
]

[tool.flake8]
max-line-length = 120
extend-ignore = ["E203", "E501", "W503"]
exclude = [".git", "__pycache__", ".venv", "htmlcov"]

[tool.pylint.main]
ignore = ["htmlcov"]
jobs = 0

[tool.pylint.format]
max-line-length = 120

[tool.pylint.messages_control]
disable = [
    "missing-module-docstring",
    "missing-class-docstring",
    "missing-function-docstring",
    "too-few-public-methods",
    "invalid-name",
]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
strict_optional = true
warn_return_any = true
warn_unused_configs = true

[tool.pyright]
typeCheckingMode = "strict"
pythonVersion = "3.10"
# 第三方库无类型存根产生大量噪音，关闭相关检查
reportUnknownMemberType = false
reportUnknownVariableType = false
reportUnknownArgumentType = false
# 启用严格检查选项
reportOptionalMemberAccess = true
reportCallInDefaultInitializer = true
reportFunctionMemberAccess = true
reportMissingImports = true
reportMissingTypeStubs = false

[tool.coverage.run]
source = ["."]
omit = [
    "tests/*",
    ".plan/*",
    "docs/*",
    "*/__pycache__/*",
    ".vscode/*",
    "main.py",
    "strategies/bridges/*",
    "data/exporter.py",
    "backtest/vnpy_backtest_engine.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
    "raise ImportError",
]