[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.package-dir]
cli = "workspace/cli"
common = "workspace/common"
config = "workspace/config"
data = "workspace/data"
backtest = "workspace/backtest"
strategies = "workspace/strategies"

[tool.setuptools]
packages = [
    "cli", "common", "config", "data", "backtest",
    "strategies", "strategies.strategy_aspects",
    "strategies.strategy_aspects.direction",
    "strategies.strategy_aspects.interceptors",
    "strategies.core", "strategies.runtime", "strategies.bridges",
    "strategies.utils",
]

[tool.uv.workspace]
members = ["workspace/packages/python-contracts", "workspace/report"]

[project]
name = "quantsmith"
version = "0.4.0-dev"
description = "AI 打造的传统量化策略研发工具链"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Financial and Insurance Industry",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "tqsdk>=3.0",
    "vnpy>=3.8",
    "vnpy_ctastrategy>=1.2",
    "pandas>=2.0",
    "numpy>=1.24",
    "matplotlib>=3.7",
    "plotly>=5.0",
    "peewee>=3.15",
    "typing-extensions>=4.0",
    "optuna>=3.0",
    "akshare>=1.16",
    "loguru>=0.7",
    "pyarrow>=14",
    "ta-lib>=0.5",
    "pandera>=0.18",
    "quantsmith-report",  # workspace member: report 域
]

[tool.uv.sources]
quantsmith-report = { workspace = true }

[dependency-groups]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "mypy>=1.5",
    "pandas-stubs>=2.0",
    "tomli-w>=1.0",
    "ruff>=0.6",
    "jsonschema>=4.0",
]

[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true

[tool.pytest.ini_options]
testpaths = ["workspace/tests", "workspace/packages/python-contracts/tests"]
pythonpath = []
python_files = "test_*.py"
python_functions = "test_*"
addopts = "-v --tb=short --strict-markers --cov=. --cov-report=term-missing --cov-report=html:output/coverage --import-mode=importlib"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "core: tests for strategy core module",
    "config: tests for config manager",
    "loader: tests for data loader",
    "database: tests for database module",
]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "SIM", # flake8-simplify
]
ignore = ["E501", "B017", "B027", "SIM102", "UP046"]
exclude = [".git", "__pycache__", ".venv", "htmlcov"]

[tool.ruff.lint.per-file-ignores]
# strategies/__init__.py 的 import 顺序不能改（避免循环导入）
"workspace/strategies/__init__.py" = ["I001"]
# 独立脚本需要 sys.path.insert
"workspace/tools/fetch_data.py" = ["E402"]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.12"
explicit_package_bases = true
ignore_missing_imports = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
strict_optional = true
warn_return_any = true
warn_unused_configs = true

[tool.pyright]
typeCheckingMode = "strict"
pythonVersion = "3.12"
# 第三方库无类型存根产生大量噪音，关闭相关检查
reportUnknownMemberType = false
reportUnknownVariableType = false
reportUnknownArgumentType = false
# 启用严格检查选项
reportOptionalMemberAccess = true
reportCallInDefaultInitializer = true
reportFunctionMemberAccess = true
reportMissingImports = true
reportMissingTypeStubs = false

[tool.coverage.run]
source = ["."]
omit = [
    "workspace/tests/*",
    ".plan/*",
    "workspace/docs/*",
    "*/__pycache__/*",
    ".vscode/*",
    "main.py",
    "workspace/strategies/bridges/*",
    "workspace/data/exporter.py",
    "workspace/backtest/vnpy_backtest_engine.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
    "raise ImportError",
]
