[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
# 业务包物理位置在 workspace/ 下，但需保持扁平包名（data 而非 workspace.data）。
# where=["workspace"] 把 workspace 作为源码根自动发现并映射，无需手写 packages/package-dir。
# include 限定只打包这几个业务域，排除 packages（跨语言共享契约，独立 member）、tests、tools、docs。
where = ["workspace"]
include = ["cli*", "common*", "config*", "data*", "backtest*", "strategies*", "report*", "research*"]

[tool.uv.workspace]
# packages/python-contracts 是跨业务域、跨语言复用的共享契约包，保持独立 member。
# 业务域（含 report）统一作为主项目 quantsmith 的子包，由 packages.find 发现，不再各自建 member。
members = ["workspace/packages/python-contracts"]

[project]
name = "quantsmith"
version = "0.4.0-dev"
description = "AI 打造的传统量化策略研发工具链"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Financial and Insurance Industry",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "tqsdk>=3.0",
    "vnpy>=3.8",
    "vnpy_ctastrategy>=1.2",
    "pandas>=2.0",
    "numpy>=1.24",
    "matplotlib>=3.7",
    "plotly>=5.0",
    "peewee>=3.15",
    "typing-extensions>=4.0",
    "optuna>=3.0",
    "akshare>=1.16",
    "loguru>=0.7",
    "pyarrow>=14",
    "ta-lib>=0.5",
    "pandera>=0.18",
]

[dependency-groups]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "mypy>=1.5",
    "pandas-stubs>=2.0",
    "tomli-w>=1.0",
    "ruff>=0.6",
    "jsonschema>=4.0",
    "quantsmith-contracts",
]

[tool.uv.sources]
quantsmith-contracts = { workspace = true }

[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true

[tool.pytest.ini_options]
testpaths = ["workspace/tests", "workspace/packages/python-contracts/tests"]
pythonpath = ["workspace"]
python_files = "test_*.py"
python_functions = "test_*"
addopts = "-v --tb=short --strict-markers -m 'not slow and not local_data' --import-mode=importlib"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: tests crossing module boundaries",
    "local_data: tests requiring local .quant_shared_data files",
    "core: tests for strategy core module",
    "config: tests for config manager",
    "loader: tests for data loader",
    "database: tests for database module",
]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "SIM", # flake8-simplify
]
ignore = ["E501", "B017", "B027", "SIM102", "UP046"]
exclude = [".git", "__pycache__", ".venv", "htmlcov"]

[tool.ruff.lint.per-file-ignores]
# strategies/__init__.py 的 import 顺序不能改（避免循环导入）
"workspace/strategies/__init__.py" = ["I001"]
# research/ 业务域刻意保留 shaping-theory 论文原始记号：
# - N801/N802/N803/N806/N815: Gate1_5Result / mu_D / sd_D / P_win_finiteT / R_equals_1 等
#   对齐数学论文的 mixedCase / snake_case_with_digits
"workspace/research/**/*.py" = ["N801", "N802", "N803", "N806", "N815"]
"workspace/tests/research/**/*.py" = ["N801", "N802", "N803", "N806", "N815"]
# workbench 临时研究脚本同样保留数学论文记号：
"docs/workbench/**/*.py" = ["N801", "N802", "N803", "N806", "N815"]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.12"
# 业务包物理位置在 workspace/ 下（common/data/config/... 映射为顶层包名），
# 需把 workspace 设为包搜索根，否则跨包 import 解析不到类型、回退成 Any，
# 触发大量 warn_return_any（no-any-return）误报。
mypy_path = "workspace"
explicit_package_bases = true
ignore_missing_imports = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
strict_optional = true
warn_return_any = true
warn_unused_configs = true

# 测试代码豁免"函数必须带类型注解"（no-untyped-def / no-incomplete-def）：
# 测试函数以 fixture/断言为主，强制返回值与参数注解收益低、噪音高。
# 但仍保留 check_untyped_defs=true，因此测试体内的真实类型错误
# （arg-type / union-attr / attr-defined 等）依旧会被检出。
[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
disallow_incomplete_defs = false

[tool.pyright]
typeCheckingMode = "strict"
pythonVersion = "3.12"
# 第三方库无类型存根产生大量噪音，关闭相关检查
reportUnknownMemberType = false
reportUnknownVariableType = false
reportUnknownArgumentType = false
# 启用严格检查选项
reportOptionalMemberAccess = true
reportCallInDefaultInitializer = true
reportFunctionMemberAccess = true
reportMissingImports = true
reportMissingTypeStubs = false

[tool.coverage.run]
source = ["."]
omit = [
    "workspace/tests/*",
    ".plan/*",
    "docs/*",
    "*/__pycache__/*",
    ".vscode/*",
    "main.py",
    "workspace/strategies/bridges/*",
    "workspace/data/exporter.py",
    "workspace/backtest/vnpy_backtest_engine.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
    "raise ImportError",
]
