[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "quantsmith-report"
version = "0.1.0"
description = "Report generation and web dashboard for Quantsmith"
requires-python = ">=3.12"
license = "MIT"
dependencies = [
    "quantsmith",  # 依赖主项目（提供 data、common 等包）
    "loguru>=0.7",
    "pandas>=2.0",
    "optuna>=3.0",
]

[tool.setuptools]
package-dir = {"report" = "."}
packages = [
    "report",
    "report.builder",
    "report.cache",
    "report.reporter",
    "report.writer",
]

[tool.uv.sources]
quantsmith = { workspace = true }
